Fix navbar title alignment

--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -8,7 +8,7 @@ body {
     margin-bottom: 15px;
   }
 
-  .navbar-brand {
+  .navbar-brand-title {
     vertical-align: top;
   }
 }
